# OpenQarUI

./: .gitignore  CMakeLists.txt  ContentPane.qml  ControlBar.qml  Main.qml  StatusBar.qml  bluetoothmediacontroller.cpp  bluetoothmediacontroller.h  install.sh  main.cpp  resources.qrc
include/: bluetoothmediacontroller.h  lastfmapihandler.h  pulseaudiocontroller.h
pages/: BluetoothMusicPage.qml  MainMenu.qml  MenuButton.qml  MusicMenu.qml
pages/menu/: MainMenu.qml
qml/: AppearanceData.qml  BackupCamera.qml  ContentPane.qml  ControlBar.qml  Main.qml  StatusBar.qml
qml/pages/: BluetoothMusicPage.qml  MainMenu.qml  MenuButton.qml  SettingsMenu.qml  SettingsPage.qml
src/: bluetoothmediacontroller.cpp  lastfmapihandler.cpp  main.cpp  pulseaudiocontroller.cpp
